Resolved about page not appearing due to motion on mobile

--- a/outdancinghamilton/app/globals.css
+++ b/outdancinghamilton/app/globals.css
@@ -43,7 +43,8 @@ body {
   --color-brand-darkest: #02241b;
   --color-brand-highlight: #f18a49;
   --color-brand-pop: #fe5912;
-  --color-brand-pink: #e72cb5;
+  /* --color-brand-pink: #e72cb5; */
+  --color-brand-pink: #f65bcc;
   --color-purple: #540142;
 
    /* =========================
